--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kabala TAROT | Ý nghĩa và rút bài Tarot Online</title>
     <script src="script.ts"></script>
     <link rel="icon" type="image/svg+xml" href="">
 </head>
