--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kabala TAROT | Ý nghĩa và rút bài Tarot Online</title>
+	<meta name="description" content="Kabala TAROT là một công cụ giúp bạn xem và giải nghĩa bài Tarot. Tarot là một bộ bài bốn mươi lá bài được sử dụng để tiên đoán tương lai hoặc tìm kiếm những thông tin tiềm ẩn về tương lai.">
     <script src="script.ts"></script>
     <link rel="icon" type="image/svg+xml" href="">
 </head>
