--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
 
         setFavicon('white', 'black')
     </script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-519EQXF7P3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-519EQXF7P3');
+	</script>
 </body>
 </html>
